<resources>
    <string name="app_name">T1_Aplicativos_Grupo8</string>

    <string name="Email">Email</string>
    <string name="Login">Iniciar Sesion</string>
    <string name="resgis">Registrate</string>
    <string name="name">Nombre</string>
    <string name="registrar">Registrar</string>
    <string name="ConfirmPassword">Confirmar Contraseña</string>
    <string name="Password">Contraseña</string>
    <string name="Send">Enviar</string>
    <string name="welcome">Bienvenido a la AppMovil Trujillo!</string>
    <string name="folowus">Siguenos en nuestras redes sociales</string>
    <string name="cuenta">Todavia no tienes una cuenta?</string>
    <string name="back">Volver</string>

    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="instagram">instagram</string>
    <string name="linkedin">linkedin</string>
    <string name="youtube">youtube</string>

    <string name="alreadyText">Ya tienes una cuenta?</string>

    <string name="create">Registrar</string>
    <string name="read">Listar</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>
    <string name="titulo_participantes">Participantes de la Clase</string>
    <string name="titulo_tareas">Tareas</string>
    <string name="titulo_clase">Clase</string>
    <string name="label_horarios">Horarios:</string>
    <string name="btn_alumnos_clase">Alumnos de la Clase</string>
    <string name="btn_registrar_tarea">Registrar Tarea</string>
    <string name="btn_ver_tareas">Ver Tareas</string>
    <string name="open">Abrir menú</string>
    <string name="close">Cerrar menú</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="btn_agregar_profesor">Agregar Profesor</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellido</string>
    <string name="hint_email">Email</string>
    <string name="hint_contrasenia">Contraseña</string>
    <string name="hint_carrera">Carrera</string>
    <string name="titulo_gestion_usuarios">Gestión de Usuarios</string>
    <string name="btn_agregar_usuario">Agregar Usuario</string>
    <string name="hint_buscar_usuario">Buscar usuario</string>
    <string name="hint_dia">Día (Ej: Lunes)</string>
    <string name="hint_hora_inicio">Hora inicio (HH:MM)</string>
    <string name="hint_hora_fin">Hora fin (HH:MM)</string>
    <string name="hint_id_clase">ID Clase</string>
    <string name="detalle_clase">Detalle de Clase</string>
    <string name="ver_tareas">Ver Tareas</string>
    <string name="ver_participantes">Ver Participantes</string>
    <string name="horarios">Horarios:</string>
    <string name="hint_especialidad">Especialidad</string>
    <string name="hint_rol">Rol</string>
    <string name="hint_id_estudiante">ID del Estudiante</string>
    <string name="hint_titulo_tarea">Título</string>
    <string name="hint_descripcion_tarea">Descripción</string>
    <string name="hint_fecha_entrega">Fecha de entrega</string>
    <string name="btn_agregar_clase">Agregar Clase</string>
    <string name="btn_confirmar_matricula">Confirmar Matrícula</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>