<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_yellow"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTituloClase"
            android:text="@string/titulo_clase"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/label_horarios"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerHorarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnAlumnosClase"
            android:text="@string/btn_alumnos_clase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/yelow" />

        <Button
            android:id="@+id/btnRegistrarTareaClase"
            android:text="@string/btn_registrar_tarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/yelow" />

        <Button
            android:id="@+id/btnVerTareasClase"
            android:text="@string/btn_ver_tareas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/yelow" />
    </LinearLayout>
</ScrollView>
