<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/rounded_white_bg"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/editApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_apellido"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/editContrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contrasenia"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/editEspecialidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_especialidad"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:background="@drawable/edittext_background"
        android:padding="10dp"/>
</LinearLayout>
