<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background_yellow">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:padding="5dp"
        app:srcCompat="@mipmap/logo_upn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView2"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:padding="0dp"
        android:src="@drawable/profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="24dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomEnd="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/Send"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22sp"
        app:cornerRadius="12dp"
        android:backgroundTint="@color/yelow"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp">

        <View
            android:layout_width="60dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/folowus"
            android:textSize="14sp"
            android:layout_marginHorizontal="12dp"
            android:textStyle="bold"/>

        <View
            android:layout_width="60dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/facebook"
            android:contentDescription="@string/facebook"
            app:tint="@color/facebook" />

        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/twitter"
            android:contentDescription="@string/twitter"
            app:tint="@color/twitter"/>

        <ImageView
            android:id="@+id/youtubeIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/youtube"
            android:contentDescription="@string/youtube"
            app:tint="@color/youtube"/>

        <ImageView
            android:id="@+id/instagramIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/instagram2"
            android:contentDescription="@string/instagram"/>

        <ImageView
            android:id="@+id/linkedinIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/linkedin"
            android:contentDescription="@string/linkedin"
            app:tint="@color/linkin"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/go_login_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/cuenta"
            android:textStyle="bold"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/goToRegisterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/yelow"
            android:text="@string/resgis"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>