<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/rounded_white_bg"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editTituloTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_titulo_tarea"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/editDescripcionTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_descripcion_tarea"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/editFechaEntregaTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_fecha_entrega"
        android:focusable="false"
        android:clickable="true"
        android:inputType="none"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:background="@drawable/edittext_background"
        android:padding="10dp" />
</LinearLayout>
